# SymbolicLR

./: .gitignore  LICENSE  app.py  benchmark.py  demo.py  experiment_mnist.py  mnist_example.py  pyproject.toml  pytest.ini  readme.md  requirements-gpu.txt  requirements.txt  test_pop.py  test_probe.py
.streamlit/: config.toml
api/: main.py
baselines/: __init__.py  schedules.py
cli/: main.py
cli/commands/: benchmark.py  diagnostics.py  evolve.py  experiment.py  info.py  replay.py
config/: __init__.py  settings.py
configs/: default.yaml  research.yaml
dashboard/: package-lock.json  package.json
dashboard/public/: results.json
dashboard/src/: App.css  App.jsx  index.css
data/: fidelity.py  loader.py  surrogate_labels.npy
experiments/: ablation_terminal_set.py  mnist_example.py  mnist_probe.py  step1_end_to_end_validation.py
gp/: diagnostics.py  diversity.py  evaluator.py  evolution.py  fitness.py  map_elites.py  meta_controller.py  novelty.py  operator_controller.py  operators.py  population.py  rust_bridge.py  simplify.py  surrogate.py  tree.py
models/: probe.py
optimiser/: compare.py  experiment_runner.py  hybrid.py  plotting.py
research_journal/: ARCHITECTURE.md  MASTER_LOG.md  OPEN_QUESTIONS.md
research_journal/architecture_decisions/: ADR-001_project_redefinition.md  ADR-002_config_alignment.md  ADR_INDEX.md
research_journal/benchmarks/: BENCHMARK_INDEX.md
research_journal/experiments/: EXPERIMENT_INDEX.md
research_journal/failures/: FAILURE_INDEX.md
rust_core/: Cargo.toml
rust_core/src/: archive.rs  ast.rs  evolution.rs  lib.rs  operators.rs
src/symbolr/: config.py
tests/: test_api_streaming.py  test_phase2_multivar.py  test_phase3_gradient_aware.py  test_phase4_benchmark.py  test_phase6_ablation.py  test_smoke.py
tests/integration/: test_app.py  test_benchmark_pipeline.py
tests/unit/: test_evaluator.py  test_evolution.py  test_fidelity.py  test_gp_core.py  test_hybrid.py  test_loader.py  test_map_elites.py  test_probe.py  test_rust_core.py  test_simplify.py  test_state.py
ui/: charts.py  state.py  theme.py
ui/pages/: __init__.py  evolution_lab.py  insights.py  overview.py  (+3 more)
(+57 files in other folders)
