[package]
name = "symbolr_rust"
version = "0.1.0"
edition = "2021"

# cdylib  → Python extension module (.pyd/.so)
# rlib    → required for `cargo test` to link the test-harness binary
[lib]
name = "symbolr_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 0.22 supports Python 3.13; abi3-py39 gives forward-compatible stable ABI.
pyo3       = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy      = "0.22"
ndarray    = "0.16"
rayon      = "1.10"
dashmap    = "6.0"
once_cell  = "1.19"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Phase 2: random tree generation and genetic operators
rand       = { version = "0.8", features = ["small_rng", "serde1"] }